--- a/index.html
+++ b/index.html
@@ -10,17 +10,63 @@
   <body>
   	<div class="main-nav">
   		<ul class="nav">
-  			<li class="name">Eric Crosby</li>
+  			<li class="name" id="top">Eric Crosby</li>
   			<li><a href="index.html">Home</a></li>
-  			<li><a href="portfolio.html">Portfolio</a></li>
-  			<li><a href="contact.html">Contact</a><li>
-  			<li><a href="skills.html">Skills</a><li>
+  			<li><a href="#portfolio">Portfolio</a></li>
+  			<li><a href="#contact">Contact</a><li>
+  			<li><a href="#skills">Skills</a><li>
   			</ul>
   		</div>
 
-  		<header>
-  			<img src="" alt="profile image" />
-  		</header>
+  		
+  		<div class="profile">
+	  		<header>
+	  			<img src="images/responsive-layout-profile.png" alt="profile image" />
+	  			<p>Here's some text that I'll change later.</p>
+	  		</header>
+	  	</div>
+
+	  	<div class="projects" id="portfolio">
+	  		<h2>Portfolio</h2>
+	  		<img src="images/portfolio-1.png" alt="portfolio image 1" />
+	  			<div class="caption">
+	  				<h3>Marketing Page</h3>
+	  				<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+	  			</div>
+  			<img src="images/portfolio-2.png" alt="portfolio image 2" />
+  				<div class="caption">
+  					<h3>Search Page</h3>
+  					<p>This project searches through a specific database to find information that the user is trying to look up.</p>
+  				</div>
+			<img src="images/portfolio-3.png" alt="portfolio image 3" />
+				<div class="caption">
+  					<h3>Travel App</h3>
+  					<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+  				</div>
+			<img src="images/portfolio-4.png" alt="portfolio image 4" />
+				<div class="caption">
+  					<h3>Map of Favorite Spots</h3>
+  					<p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+  				</div>
+			<img src="images/portfolio-5.png" alt="portfolio image 5" />
+				<div class="caption">
+  					<h3>Photo Gallery</h3>
+  					<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+  				</div>
+			<img src="images/portfolio-6.png" alt="portfolio image 6" />
+				<div class="caption">
+  					<h3>Calculator</h3>
+  					<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+  				</div>
+		</div>
+
+		<div class="contactinfo" id="contact">
+			<h2>Contact</h2>
+			<p> If you're intested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+			<p>Phone +1 (111) 555-1234</p>
+			<p>Email email@yoursite.com</p>
+		</div>
+
 
   		<footer>
   			<ul>
