--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
   <link href="https://fonts.googleapis.com/css?family=Audiowide|Catamaran:400,700" rel="stylesheet"></head>
   <body>
   	<div class="main-nav">
-  		<ul class="nav">
-  			<li class="name" id="top">Eric Crosby</li>
-  			<li><a href="index.html">Home</a></li>
-  			<li><a href="#portfolio">Portfolio</a></li>
-  			<li><a href="#contact">Contact</a><li>
-  			<li><a href="#skills">Skills</a><li>
-  			</ul>
-  		</div>
+  		<header class="main-header">
+			<div class="container clearfix">
+				<h1 class="name">Eric Crosby</a></h1>
+				<ul class="main-nav">
+					<li><a href="#top">Home</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li><a href="#">Skills</a></li>
+				</ul>
+			</div>
+		</header>
 
   		
   		<div class="profile">
-	  		<header>
 	  			<img src="images/responsive-layout-profile.png" alt="profile image" />
 	  			<p>Here's some text that I'll change later.</p>
-	  		</header>
 	  	</div>
 
 	  	<div class="projects" id="portfolio">
