continue editing index and styles to match 320px mockup

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 				</ul>
 			</div>
 		</header>
-
+	</div>
   		
   		<div class="profile">
 	  			<img src="images/responsive-layout-profile.png" alt="profile image" />
-	  			<p>Here's some text that I'll change later.</p>
+	  			<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehour and am excited to put all my skills to use!</p>
 	  	</div>
 
 	  	<div class="projects" id="portfolio">
@@ -64,16 +64,16 @@
 		<div class="contactinfo" id="contact">
 			<h2>Contact</h2>
 			<p> If you're intested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-			<p>Phone +1 (111) 555-1234</p>
-			<p>Email email@yoursite.com</p>
+			<p>Phone <span class="contactdata">+1 (111) 555-1234</span></p>
+			<p>Email <span class="contactdata">email@yoursite.com</span></p>
 		</div>
 
 
   		<footer>
   			<ul>
-  				<li>Eric Crosby</li>
-  				<li><a href="#top">Back to Top</a><li>
-  				</ul>
+  				<li class="footer-name">Eric Crosby</li>
+  				<li class="top-link"><a href="#top">Back to top</a></li>
+  			</ul>
   		</footer>	
 
   </body>
