Added "Skills" section to index and 320px design

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Audiowide|Catamaran:400,700" rel="stylesheet"></head>
   <body>
-  	<div class="main-nav">
+  	<nav>
   		<header class="main-header">
 			<div class="container clearfix">
 				<h1 class="name">Eric Crosby</a></h1>
-				<ul class="main-nav">
-					<li><a href="#top">Home</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
-					<li><a href="#">Skills</a></li>
-				</ul>
+					<ul class="main-nav">
+						<li><a href="#top">Home</a></li>
+						<li><a href="#portfolio">Portfolio</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
 			</div>
 		</header>
-	</div>
+	</nav>
   		
   		<div class="profile">
 	  			<img src="images/responsive-layout-profile.png" alt="profile image" />
@@ -59,6 +60,16 @@
   					<h3>Calculator</h3>
   					<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
   				</div>
+		</div>
+
+		<div class="skills" id="skills">
+			<h2>Skills</h2>
+			<p>I have some skills. Here's a list of them.</p>
+			<ul>
+				<li>Responsive Layouts</li>
+				<li>This other thing</li>
+				<li>One more thing</li>
+			</ul>
 		</div>
 
 		<div class="contactinfo" id="contact">
