--- a/index.html
+++ b/index.html
@@ -23,43 +23,50 @@
 		</header>
 	</nav>
   		
-  		<div class="profile">
+  		<div class="profile clearfix">
 	  			<img src="images/responsive-layout-profile.png" alt="profile image" />
-	  			<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehour and am excited to put all my skills to use!</p>
+	  			<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 	  	</div>
 
-	  	<div class="projects" id="portfolio">
+	  	<div class="portfolio clearfix">
 	  		<h2>Portfolio</h2>
-	  		<img src="images/portfolio-1.png" alt="portfolio image 1" />
-	  			<div class="caption">
-	  				<h3>Marketing Page</h3>
-	  				<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-	  			</div>
-  			<img src="images/portfolio-2.png" alt="portfolio image 2" />
-  				<div class="caption">
-  					<h3>Search Page</h3>
-  					<p>This project searches through a specific database to find information that the user is trying to look up.</p>
-  				</div>
-			<img src="images/portfolio-3.png" alt="portfolio image 3" />
-				<div class="caption">
-  					<h3>Travel App</h3>
-  					<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-  				</div>
-			<img src="images/portfolio-4.png" alt="portfolio image 4" />
-				<div class="caption">
-  					<h3>Map of Favorite Spots</h3>
-  					<p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-  				</div>
-			<img src="images/portfolio-5.png" alt="portfolio image 5" />
-				<div class="caption">
-  					<h3>Photo Gallery</h3>
-  					<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-  				</div>
-			<img src="images/portfolio-6.png" alt="portfolio image 6" />
-				<div class="caption">
-  					<h3>Calculator</h3>
-  					<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-  				</div>
+	  		<ul class="projects clearfix">
+	  			<li>
+	  				<img src="images/portfolio-1.png" alt="portfolio image 1" />
+	  				<div class="caption">
+		  				<h3>Marketing Page</h3>
+		  				<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+		  		</li>
+	  			<li>
+  					<img src="images/portfolio-2.png" alt="portfolio image 2" />
+  					<div class="caption">
+	  					<h3>Search Page</h3>
+	  					<p>This project searches through a specific database to find information that the user is trying to look up.</p>
+  				</li>
+  				<li>
+					<img src="images/portfolio-3.png" alt="portfolio image 3" />
+					<div class="caption">
+	  					<h3>Travel App</h3>
+	  					<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+  				</li>
+  				<li>
+					<img src="images/portfolio-4.png" alt="portfolio image 4" />
+					<div class="caption">
+	  					<h3>Map of Favorite Spots</h3>
+	  					<p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+  				</li>
+  				<li>
+					<img src="images/portfolio-5.png" alt="portfolio image 5" />
+					<div class="caption">
+	  					<h3>Photo Gallery</h3>
+	  					<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+  				</li>
+  				<li>
+					<img src="images/portfolio-6.png" alt="portfolio image 6" />
+					<div class="caption">
+	  					<h3>Calculator</h3>
+	  					<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+  				</li>
 		</div>
 
 		<div class="skills" id="skills">
@@ -80,10 +87,16 @@
 		</div>
 
 
-  		<footer>
+  		<footer class="footer">
   			<ul>
-  				<li class="footer-name">Eric Crosby</li>
+  				<li class="foot-name">Eric Crosby</li>
   				<li class="top-link"><a href="#top">Back to top</a></li>
+  			</ul>
+  			<ul class="foot-nav">
+  				<li><a href="#top">Home</a></li>
+  				<li><a href="#portfolio">Portfolio</a></li>
+  				<li><a href="#skills">Skills</a></li>
+  				<li><a href="#contact">Contact</a></li>
   			</ul>
   		</footer>	
 
