changed main navigation to flex box and added 1024 media queries

--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Audiowide|Catamaran:400,700" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Audiowide|Catamaran:100,200,400,700" rel="stylesheet"></head>
   <body>
   	<nav>
-  		<header class="main-header">
-			<div class="container clearfix">
+		<div class="container clearfix">
+			<header class="main-header">
 				<h1 class="name">Eric Crosby</a></h1>
+
 					<ul class="main-nav">
 						<li><a href="#top">Home</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#skills">Skills</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
-				</nav>
-			</div>
-		</header>
+
+			</header>
+		</div>
 	</nav>
   		
   		<div class="profile clearfix">
@@ -28,7 +29,7 @@
 	  			<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 	  	</div>
 
-	  	<div class="portfolio clearfix">
+	  	<div class="portfolio clearfix" id="portfolio">
 	  		<h2>Portfolio</h2>
 	  		<ul class="projects clearfix">
 	  			<li>
@@ -91,12 +92,10 @@
   			<ul>
   				<li class="foot-name">Eric Crosby</li>
   				<li class="top-link"><a href="#top">Back to top</a></li>
-  			</ul>
-  			<ul class="foot-nav">
-  				<li><a href="#top">Home</a></li>
-  				<li><a href="#portfolio">Portfolio</a></li>
-  				<li><a href="#skills">Skills</a></li>
-  				<li><a href="#contact">Contact</a></li>
+  				<li class="foot-nav"><a href="#contact">Contact</a></li>
+  				<li class="foot-nav"><a href="#skills">Skills</a></li>
+  				<li class="foot-nav"><a href="#portfolio">Portfolio</a></li>
+  				<li class="foot-nav"><a href="#top">Home</a></li>
   			</ul>
   		</footer>	
 
