Validation check/changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Eric Crosby's Profile</title>
+  <title>Eric Crosby's Project #2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -11,7 +11,7 @@
   	<nav>
 		<div class="container clearfix">
 			<header class="main-header">
-				<h1 class="name">Eric Crosby</a></h1>
+				<h1 class="name">Eric Crosby</h1>
 
 					<ul class="main-nav">
 						<li><a href="#top">Home</a></li>
@@ -37,37 +37,44 @@
 	  				<div class="caption">
 		  				<h3>Marketing Page</h3>
 		  				<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+		  			</div>
 		  		</li>
 	  			<li>
   					<img src="images/portfolio-2.png" alt="portfolio image 2" />
   					<div class="caption">
 	  					<h3>Search Page</h3>
 	  					<p>This project searches through a specific database to find information that the user is trying to look up.</p>
+	  				</div>	
   				</li>
   				<li>
 					<img src="images/portfolio-3.png" alt="portfolio image 3" />
 					<div class="caption">
 	  					<h3>Travel App</h3>
 	  					<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+	  				</div>	
   				</li>
   				<li>
 					<img src="images/portfolio-4.png" alt="portfolio image 4" />
 					<div class="caption">
 	  					<h3>Map of Favorite Spots</h3>
 	  					<p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+	  				</div>	
   				</li>
   				<li>
 					<img src="images/portfolio-5.png" alt="portfolio image 5" />
 					<div class="caption">
 	  					<h3>Photo Gallery</h3>
 	  					<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+	  				</div>	
   				</li>
   				<li>
 					<img src="images/portfolio-6.png" alt="portfolio image 6" />
 					<div class="caption">
 	  					<h3>Calculator</h3>
 	  					<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+	  				</div>	
   				</li>
+  			</ul>	
 		</div>
 
 		<div class="skills" id="skills">
